--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Monte Carlo Tree Search Playground</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">-->
+    <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
+    <!--<link rel="stylesheet" href="css/main.css">-->
     <link rel="icon" href="img/dice.png">
 </head>
 <body>
@@ -61,18 +61,20 @@
 </div>
 
 
-<script src="node_modules/jquery/dist/jquery.min.js"></script>
-<script src="node_modules/lodash/lodash.min.js"></script>
-<script src="node_modules/d3/build/d3.min.js"></script>
+<!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
+<!--<script src="node_modules/lodash/lodash.min.js"></script>-->
+<!--<script src="node_modules/d3/build/d3.min.js"></script>-->
 
-<script src="js/MessageBus.js"></script>
-<script src="js/BarChart.js"></script>
-<script src="js/LineChart.js"></script>
-<script src="js/TicTacToeBoard.js"></script>
-<script src="js/ConnectFourBoard.js"></script>
-<script src="js/BoardView.js"></script>
-<script src="js/AI.js"></script>
-<script src="js/App.js"></script>
+<!--<script src="js/MessageBus.js"></script>-->
+<!--<script src="js/BarChart.js"></script>-->
+<!--<script src="js/LineChart.js"></script>-->
+<!--<script src="js/TicTacToeBoard.js"></script>-->
+<!--<script src="js/ConnectFourBoard.js"></script>-->
+<!--<script src="js/BoardView.js"></script>-->
+<!--<script src="js/AI.js"></script>-->
+<!--<script src="js/App.js"></script>-->
+
+<script src="bundle.js"></script>
 
 </body>
 </html>
