--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Monte Carlo Tree Search Playground</title>
-    <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">-->
-    <!--<link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">-->
-    <!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-    <!--<link rel="stylesheet" href="css/main.css">-->
+    <link rel="stylesheet" href="bundle.css">
     <link rel="icon" href="img/dice.png">
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse">
     <div class="container">
         <div class="navbar-header">
             <div class="navbar-brand">
@@ -59,20 +56,6 @@
     <div id="board">
     </div>
 </div>
-
-
-<!--<script src="node_modules/jquery/dist/jquery.min.js"></script>-->
-<!--<script src="node_modules/lodash/lodash.min.js"></script>-->
-<!--<script src="node_modules/d3/build/d3.min.js"></script>-->
-
-<!--<script src="js/MessageBus.js"></script>-->
-<!--<script src="js/BarChart.js"></script>-->
-<!--<script src="js/LineChart.js"></script>-->
-<!--<script src="js/TicTacToeBoard.js"></script>-->
-<!--<script src="js/ConnectFourBoard.js"></script>-->
-<!--<script src="js/BoardView.js"></script>-->
-<!--<script src="js/AI.js"></script>-->
-<!--<script src="js/App.js"></script>-->
 
 <script src="bundle.js"></script>
 
